Fixed sprite spacing issue

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,8 @@
 // Sprites for the page
 $view-sprite: sprite-map(
 	"home/*.png",
-	$home-spacing: 2px
+	$home-spacing: 2px,
+	$home-fourkitchens-spacing: 5px
 );
 
 @import "partials/normalize";
