--- a/src/sass/partials/_sponsors.scss
+++ b/src/sass/partials/_sponsors.scss
@@ -44,6 +44,7 @@
 		margin: 0;
 	}
 }
+
 .sponsorlist {
 	margin: 0;
 	padding: 2em 0 0;
@@ -54,6 +55,7 @@
 	li {
 		display: inline-block;
 		margin-left: 2em;
+		margin-bottom: 1em;
 		&:first-child {
 			margin-left: 0;
 		}
